--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1048,13 +1048,13 @@ The Algorithm Design stage in the fair-by-design workflow is a critical phase wh
 
     \item \emph{Parameter Tuning for Fairness:}
 
-    \begin{itemize>
+    \begin{itemize}
 
     \item Fine-tune model parameters to achieve a balance between fairness and accuracy.
 
     \item Explore the impact of regularization strength on the model's ability to mitigate biases.
 
-\end{itemize}
+    \end{itemize}
 
 \end{itemize}
 
