algorithm design completed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1114,7 +1114,312 @@ The Algorithm Design stage in the fair-by-design workflow is a critical phase wh
 
 \subsubsection{Fairness through unawareness with proxy detection via variables only}
 
+The algorithm elucidated in this section seamlessly integrates with the Fair-by-Design workflow, embodying the core concept of \emph{fairness through unawareness}. Rooted in the overarching goal of mitigating bias, this approach represents a significant stride in addressing fairness considerations within the machine learning pipeline.
+
+The design choices of this algorithm are inherently influenced by the protected attributes detected during the data acquisition step of the Fair-by-Design workflow. Recognizing that bias may emanate not only from explicit protected attributes but also from indirect influences, the algorithm extends its reach beyond the conventional scope.
+
+In alignment with the Fair-by-Design ethos, this algorithm advocates for the removal of both identified protected attributes and a set of strategically identified proxy variables. These proxy variables, akin to shadows of potential bias, are meticulously pinpointed and eliminated. The vigilance in detecting these proxies is inspired by the commitment to unravel and rectify any factors that might indirectly contribute to bias within the AI system.
+
+Drawing insights from the comprehensive analysis conducted during the data acquisition phase, the algorithm takes a holistic view of potential sources of bias. The removal of proxy variables, guided by this understanding, exemplifies a proactive stance in addressing bias from multiple dimensions.
+
+Citing Gupta et al.'s work on proxy variables in AI systems \cite{Gupta2018ProxyF}, the algorithm's incorporation of this innovative element underscores a commitment to not only meet accuracy standards but also to foster equity and fairness. The dynamic interplay between the algorithm's design choices and the Fair-by-Design workflow amplifies its effectiveness in creating AI systems that are not only precise but also inherently just, unbiased, and equitable.
+
+In essence, this algorithm serves as a testament to the continuous evolution and refinement within the Fair-by-Design framework, where each step is meticulously crafted to reinforce the principles of fairness and transparency.
+
+At this point it's necessary to begin with a formalization for the algorithm itself. It's important to consider that there are two versions of this algorithm: a version in which the proxy detection is performed exploiting the concepts embedded into the association rule mining theories, more specifically using the \emph{fp-growth} algorithm. In the other version the proxy attributes are inferenced from the variables only.
+
+Let's consider a dataset \( D \) belonging to \( \mathbb{R}^{n \times m} \) with \( k \) protected variables.
+
+\textit{fairness\_evaluation} is defined as follows:
+\[
+\text{fairness\_evaluation}(v_i, Y) = \lambda(v_i, Y) \quad \forall i \in [1, k]
+\]
+
+where:
+\begin{align*}
+v\_i & : \text{ith attribute belonging to the protected variables}, Y & : \text{output column}.
+\end{align*}
+
+The fairness metric \( \lambda \) evaluates the relationship between a protected attribute \( v_i \) and the output \( Y \), producing a value that represents the level of fairness for that protected attribute. It's important to consider that the output used for the fairness metric is not strictly related to the output of the dataset but, as showed further in this section it may also be a protected attribute. This lead to the consideration that protected attributes and output variable, that are the inputs of the fairness metric, are dependent on the specific scenario in which the fairness metric is applied.
+
+\textit{dataset\_fair} is defined as follows: a dataset \( D \) is considered fair if for every value \( v \) belonging to \textit{fairness\_evaluation}, the following condition holds:
+\[ 0.8  < v < 1.25 \].
+
+Let's consider the set \( A \), represented as the set of all variables in the dataset excluding the protected variables, and the set \( B \), representing the protected variables.
+
+\textit{proxy\_detection} is defined as follows: for every variable \( \text{var} \) belonging to \( A \) and for every protected variable \( \text{var\_protected} \) belonging to \( B \), the variable is a proxy if the fairness metric \( \lambda(\text{var}, \text{var\_protected}) \) satisfies the condition:
+
+\[
+\lambda(\text{var}, \text{var\_protected}) <= 0.8 \quad \text{or} \quad \lambda(\text{var}, \text{var\_protected}) => 1.25
+\]
+
+In other words, a variable \( \text{var} \) is considered a proxy if the fairness measure \( \lambda \) between \( \text{var} \) and a protected variable \( \text{var\_protected} \) falls outside the acceptable range ]0.8, 1.25[.
+
+After having introduced the necessary theoretical concepts here's presented the approach to detect the proxy attributes for the protected attributes previously established.
+
+\textit{proxy\_detection} is defined as follows: for each antecedent \( A_i \) belonging to the antecedent list \( \mathcal{A} \), for each consequent \( C_j \) belonging to the consequent list \( \mathcal{C} \), and for each protected variable \( V_k \) belonging to the protected variable list \( \mathcal{V} \), \( A_i \) is a proxy if the fairness metric \( \lambda(A_i, C_j) \) is such that:
+
+\[\lambda(A_i, C_j) <= 0.8 \quad \text{or} \quad \lambda(A_i, C_j) >= 1.25\]
+
+In other words, an antecedent \( A_i \) is considered a proxy if the fairness measure \( \lambda \) between \( A_i \) and a consequent \( C_j \) is outside the acceptable range ]0.8, 1.25[.
+
+Here it's possible to notice how, as previously said, the concepts of protected attributes and output provided as inputs for the fairness metric are dependent on the scenario. While the typical scenario involves the protected attribute as input together with the output of the dataset, in this one the protected attribute acts like the output while the actual protected attributes are inferred from the results of the metric.
+
+Now, let $\text{proxy\_and\_protected\_attributes} \subseteq \{1, 2, \ldots, m\}$ represent the set of indices corresponding to both proxy and protected attributes.
+
+The function $\text{\textbf{proxy\_and\_protected\_attributes\_avoiding}}: D \times \text{proxy\_and\_protected\_attributes} \rightarrow \mathbb{R}^{n \times m}$ is defined as follows:
+
+\[
+\text{\textbf{proxy\_and\_protected\_attributes\_avoiding}}(D, \text{proxy\_and\_protected\_attributes}) = D_{\text{avoiding}},
+\]
+
+where $D_{\text{avoiding}}$ is the dataset obtained by setting all values to 0 for indices in $\text{proxy\_and\_protected\_attributes}$.
+
+In the following is presented the pseudocode for the algorithm, in its two different versions, presented above.
+
+\begin{algorithm}[H]
+    \caption{Fairness through unawareness with proxy detection}
+    \label{alg:fairness_algorithm}
+    \begin{algorithmic}[1]
+        \Require{dataset, protected\_attributes}
+        \Ensure{fair dataset}
+        \State $\text{global } \text{proxy\_protected\_attributes} \gets \{\}$
+        \While{\textbf{not} \textit{dataset\_fair(dataset)}}
+            \State proxies $\gets$ \textit{proxy\_detection(dataset)}\;
+            \If{proxies \textbf{is empty}}
+                \State dataset $\gets$ \textit{protected\_attributes\_free\_dataset(dataset, protected\_attributes)}\;
+                \State $\text{global } \text{proxy\_protected\_attributes} \gets \text{proxy\_protected\_attributes} \cup \text{protected\_attributes}$ 
+            \Else
+                \State dataset $\gets$ \textit{proxy\_free\_dataset(dataset)}\;
+                \State $\text{global } \text{proxy\_protected\_attributes} \gets \text{proxy\_protected\_attributes} \cup \text{proxies}$
+            \EndIf
+        \EndWhile
+        \State dataset $\gets$ \textit{proxy\_protected\_attributes\_avoiding(dataset, proxy\_protected\_attributes)}
+        \State \textbf{return} dataset
+    \end{algorithmic}
+\end{algorithm}
+
+It's relevant to provide an explaination of the algorithm above:
+
+\begin{enumerate}
+
+    \item \emph{Initialization}: Initialize the global variable \textit{proxy\_protected\_attributes} as an empty set.
+
+    \item \emph{Main Loop}:
+
+        \begin{itemize}
+
+            \item Continue iterating until the dataset is fair or no protected attributes are present.
+
+            \item Inside the loop, detect proxies and decide whether to remove proxies or protected attributes.
+
+        \end{itemize}
+
+    \item \emph{Avoidance Step}: After the loop, apply the \textit{proxy\_protected\_attributes\_avoiding} function to mitigate the impact of proxies and protected attributes.
+    
+    \item \emph{Output}: Return the resulting fair dataset.
+
+\end{enumerate}
+
+\begin{algorithm}[H]
+    \caption{Dataset fairness Evaluation}
+    \label{alg:fairness_evaluation}
+    \begin{algorithmic}[1]
+        \Require{dataset, output\_column, protected\_attributes}
+        \Ensure{List of attributes failing fairness evaluation}
+        \State unfairness\_list $\gets$ empty list\;
+        \State output $\gets$ dataset[output\_column]\;
+        \For{attribute \textbf{in} protected\_attributes}
+            \If{\textit{metric(attribute, output)} $\leq$ 0.8 \textbf{or} \textit{metric(attribute, output)} $\geq$ 1.25}
+                \State \textit{unfairness\_list.append(attribute)}\;
+            \EndIf
+        \EndFor
+        \State \textbf{return} unfairness\_list is \textbf{empty}
+    \end{algorithmic}
+\end{algorithm}
+
+For each protected attribute, the algorithm computes a fairness metric using the \textit{metric} function and compares it against predefined thresholds (0.8 and 1.25). If the metric indicates a failure in fairness, the attribute is added to the \textit{fairness\_evaluation\_list}. The algorithm returns if the unfairness list is either empty or not
+
+
+\begin{algorithm}[H]
+    \caption{Proxy and Protected Attributes Avoiding}
+    \label{alg:proxy_protected_attributes_avoiding}
+    \begin{algorithmic}[1]
+        \Require{dataset, proxy\_protected\_attributes}
+        \Ensure{Processed dataset avoiding proxy and protected attributes}
+        
+        \State $D \gets \text{copy}(dataset)$
+        
+        \For{attribute \textbf{in} proxy\_protected\_attributes}
+            \If{\textit{is\_protected\_attribute}(attribute)}
+                \State $D[\text{attribute}] \gets 0$ 
+            \EndIf
+            \If{\textit{is\_proxy\_attribute}(attribute)}
+                \State $D[\text{attribute}] \gets 0$
+            \EndIf
+        \EndFor
+        
+        \State \textbf{return} D
+    \end{algorithmic}
+\end{algorithm}
+
+The only goal of this algorithm is to avoid the effects of proxy and protected attributes on the training. This way the fairness evaluation in the \emph{Performance evaluation} step of the workflow will be accurate.
+
+
+\begin{algorithm}[H]
+    \caption{Proxy Detection via Variables Only}
+    \label{alg:proxy_detection_variables_only}
+    \begin{algorithmic}[1]
+        \Require{protected\_attributes\_list, attributes}
+        \Ensure{List of proxies}
+        
+        \State $\text{proxy\_list} \gets$ empty list\;
+        
+        \For{$\text{protected\_attribute}$ \textbf{in} $\text{protected\_attributes\_list}$}
+            \For{$\text{attribute}$ \textbf{in} $\text{attributes}$ \textbf{and not in} $\text{protected\_attributes\_list}$ \textbf{and not in} $\text{proxy\_list}$}
+                \If{\textit{metric(attribute, protected\_attribute)} $\leq$ 0.8 \textbf{or} \textit{metric(attribute, protected\_attribute)} $\geq$ 1.25}
+                    \State $\text{proxy\_list.append(attribute)}$
+                \EndIf
+            \EndFor
+        \EndFor
+        
+        \State \textbf{return} proxy\_list
+    \end{algorithmic}
+\end{algorithm}
+
+This algorithm returns the proxy list obtained the fairness metric choice as established in the proposed workflow for each non-sensitive attribute and each protected attribute.
+
+\begin{algorithm}[H]
+    \caption{Proxy Detection via FP-growth}
+    \label{alg:proxy_detection_fp_growth}
+    \begin{algorithmic}[1]
+        \Require{fp\_growth\_dataset}
+        \Ensure{List of proxies}
+        \State $\text{proxy\_list} \gets \{\}$ \Comment{Initialize an empty list to store detected proxies}
+        \For{\text{consequent} \textbf{in} fp\_growth\_dataset}
+            \For{\text{antecedent} \textbf{in} fp\_growth\_dataset}
+                \If{\textit{metric(antecedent, consequent)} $\leq$ 0.8 \textbf{or} \textit{metric(antecedent, consequent)} $\geq$ 1.25}
+                    \State \textit{proxy\_list.append(antecedent)}
+                \EndIf
+            \EndFor
+        \EndFor
+        \State \textbf{return} \text{proxy\_list}
+    \end{algorithmic}
+\end{algorithm}
+
 \subsubsection{Fairness through data rebalancing}
+
+In this approach, the paradigm of bias mitigation takes on a unique and innovative perspective, one that prioritizes data augmentation over attribute removal. Unlike traditional approaches that center on the exclusion of specific attributes, this methodology embraces the concept of data augmentation, introducing a distinctive definition of fairness and equity within the AI system.
+
+The essence of this approach revolves around the augmentation of the dataset by introducing new data instances that offer a more comprehensive and inclusive representation of the underlying population. This expanded dataset is designed to be more diverse, representative, and balanced, transcending the limitations of the original data and fostering a more nuanced understanding of fairness. 
+
+The introduction of augmented data instances leads to a redefined notion of fairness within the AI system. Instead of solely focusing on the absence of biased attributes, fairness is now measured in terms of the dataset's inclusivity and its ability to capture the diversity and nuances present within the population it seeks to serve. 
+
+This approach aligns with the broader philosophy of ensuring that AI systems are equitable, just, and capable of making informed and unbiased decisions. By augmenting the dataset, it strives to bridge the gaps in representation and provide a more equitable playing field for all individuals, regardless of their background or characteristics. 
+
+The process of data augmentation necessitates a careful selection of techniques and methodologies that can introduce new data instances while maintaining the integrity and quality of the dataset. These techniques may encompass oversampling, synthetic data generation, or other data synthesis methods, each tailored to the specific context and objectives of the AI system.
+
+In traditional fairness definitions, the focus often revolves around ensuring fair treatment for individual protected attributes, denoted as $A_1, A_2, \ldots, A_k$. While this is undoubtedly crucial, a more comprehensive understanding of fairness calls for an examination of fairness in the context of combinations of protected attributes and the output. A new definition of fairness is proposed, which takes into account the representation of all combinations of $k$ protected attributes and the output, aiming for equitable representation across these combinations.
+
+A fair dataset is defined as one in which, for each combination of protected attributes $\{A_1, A_2, \ldots, A_k\}$ and the output $O_j$, the representation is equal and proportional. Mathematically, a dataset is fair if:
+
+\[
+\forall i_1, i_2, \ldots, i_k, j: \frac{|D_{i_1, i_2, \ldots, i_k, j}|}{|D|} = \text{constant}
+\]
+
+where:
+- $D$ is the dataset,
+- $|D_{i_1, i_2, \ldots, i_k, j}|$ is the number of samples with the specific combination of protected attributes $A_{i_1}, A_{i_2}, \ldots, A_{i_k}$ and output $O_j$,
+- $|D|$ is the total number of samples in the dataset.
+
+This entails that any combination of demographic groups, defined by the protected attributes, and the output should have comparable representation, thereby fostering a balanced and unbiased dataset.
+
+By striving for equal representation of combinations of protected attributes, is addressed a fundamental aspect of fairness that transcends individual attributes. This approach provides a more nuanced understanding of fairness by considering the intersections of various demographic groups. It encourages a broader examination of potential biases that may arise when considering multiple attributes simultaneously.
+
+Incorporating this definition of fairness into the dataset rebalancing process enables us to promote a comprehensive notion of fairness, aligning with the principles of equal opportunity and non-discrimination across all combinations of protected attributes. Our subsequent algorithm and experimental evaluation are designed to actualize this definition and demonstrate its effectiveness in achieving a more equitable representation within the dataset.
+
+At this point it's necessary to begin with a formalization for the algorithm itself.
+
+
+Let \( D \) be a dataset \( R^{n \times m} \), where \( n \) is the number of samples and \( m \) is the number of features. Let \( k \) be the number of protected variables represented as \( R^{n \times 1} \), and let there be a single output variable represented as \( R^{n \times 1} \).
+
+A rebalancing function \( \mathcal{R} \) can be formally defined as a mapping:
+
+\[
+\mathcal{R}: R^{n \times m} \rightarrow R^{l \times m}
+\]
+
+where \( l > m \), and the function \( \mathcal{R} \) transforms the input dataset \( D \) of dimensions \( n \times m \) into an output dataset \( D' \) of dimensions \( l \times m \).
+
+
+
+Let \( k \) be the number of binary protected variables in the dataset \( D \), and consider the output variable to be binary as well. The number of possible combinations of these variables is \( 2^{(k+1)} \).
+
+Consider a set \( \text{Combination-frequency} \) with occurrences of all \( 2^{(k+1)} \) combinations within the dataset. For each combination, the number of rows in which that combination appears should be equal to the maximum occurrence among all combinations present in the set \( \text{Combination\textunderscore frequency} \). This maximum value is denoted as \( \text{Max}(\text{Combination-frequency}) \).
+
+Mathematically, the number of rows (\( l \)) the final dataset should have for each combination is given by:
+
+\[
+l = \text{Max}(\text{Combination-frequency})
+\]
+
+
+
+Let \( l \) be the desired number of rows for the final dataset. For each combination of values, is calculated the occurrence count \( \text{occurrence}_i \), where \( i \) ranges from 1 to \( 2^{(k+1)} \), with \( k \) being the number of protected binary variables and considering the output variable as binary.
+
+The total number of rows to be added is given by:
+
+\[
+\text{total\_rows\_to\_add} = l - \sum_{i=1}^{2^{(k+1)}} \text{occurrence}_i
+\]
+
+For each iteration:
+
+\begin{itemize}
+
+    \item The values of the protected and output variables are set according to the specific combination.
+    
+    \item For all other attributes, a random value \( \text{random\_value}_{ij} \) is generated, where \( j \) represents the specific attribute and \( i \) represents the row being added for that attribute. \( \text{random\_value}_{ij} \) is within the minimum and maximum range for attribute \( j \).
+
+\end{itemize}
+
+As showed in the following pseudocode
+
+\begin{algorithm}[H]
+    \caption{Reabalancing}
+    \begin{algorithmic}[1]
+        \State \textbf{Input:} combination\_set, combination\_frequency, protected\_attributes, dataset\_attributes
+        \State \textbf{Output:} Updated dataset
+
+        \State max\_frequency $\gets$ max(combination\_frequency)
+
+        \For{index \textbf{in} (0, len(combination\_set) - 1)}
+            \State combination $\gets$ combination\_set[index]
+            \State frequency $\gets$ combination\_frequency[index]
+            \State combination\_dataset $\gets$ dataset[dataset[combination] == combination\_set[index]]
+
+            \While{frequency $<$ max\_frequency}
+                \State new\_row $\gets$ empty
+
+                \For{(attr, val) \textbf{in} (combination, protected\_attributes)}
+                    \State new\_row[attr] $\gets$ val
+                \EndFor
+
+                \For{attr \textbf{in} dataset\_attributes \textbf{and not in} protected\_attributes}
+                    \State new\_row[attr] $\gets$ random(min(combination\_dataset[attr]), max(combination\_dataset[attr]))
+                \EndFor
+
+                \State dataset.add(new\_row)
+                \State frequency $+$= 1
+            \EndWhile
+        \EndFor
+
+        \State \textbf{return} Updated dataset
+    \end{algorithmic}
+\end{algorithm}
+
+this algorithm adds rows to the dataset until every combination have the same frequency. Fundamental for this algorithm is the way in which are generate the value for the variables not involved into the combination. These are added considering the sub-dataset of the original dataset in which the combination occurs. 
+
 
 \subsection{Significance}
 
